[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/ui/paper.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/canning_heroes_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/Slackey-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/restore_window.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/maximize_window.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/ui/simple_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/props/credits_jar.png" type="Texture" id=9]
[ext_resource path="res://assets/sfx/jar_clink.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/ui/tomato_icon.png" type="Texture" id=11]
[ext_resource path="res://src/UI/MinigameButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/ui/carrot_icon.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 128
extra_spacing_bottom = -80
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "IconPulse"
length = 4.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("BeanButton")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pulse"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("TomatoButton")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pulse"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CarrotButton")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pulse"
} ]
}

[node name="MainMenu" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanningHeroesTitle" type="Label" parent="Interface"]
anchor_right = 1.0
margin_top = 101.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.458824, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.0745098, 0.0862745, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "CANNING
HEROES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialEditionTitle" type="Label" parent="Interface"]
anchor_right = 1.0
margin_left = 11.0
margin_top = 338.888
margin_right = 11.0
margin_bottom = 439.888
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.458824, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.0745098, 0.0862745, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Special Edition"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -78.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenToggle" type="TextureButton" parent="Interface/TextureRect"]
margin_left = 8.0
margin_top = 8.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildNumber" type="Label" parent="Interface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_right = 214.0
custom_fonts/font = ExtResource( 8 )
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="Interface" groups=[
"buttons",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -306.266
margin_top = -314.616
margin_right = -38.2661
margin_bottom = -52.6161
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="JarClinkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="BeanButton" parent="." instance=ExtResource( 12 )]
position = Vector2( 554.143, 603.466 )
label = "Snap!"

[node name="TomatoButton" parent="." instance=ExtResource( 12 )]
position = Vector2( 953.547, 603.466 )
image = ExtResource( 11 )
label = "Peel and Chop!"

[node name="CarrotButton" parent="." instance=ExtResource( 12 )]
position = Vector2( 1348.17, 603.466 )
image = ExtResource( 13 )
label = "Peel, Wash, Chop!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IconPulse"
anims/IconPulse = SubResource( 2 )
[connection signal="pressed" from="Interface/TextureRect/FullscreenToggle" to="." method="_on_FullscreenToggle_pressed"]
[connection signal="pressed" from="Interface/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="BeanButton" to="." method="_on_BeanButton_pressed"]
[connection signal="pressed" from="TomatoButton" to="." method="_on_TomatoButton_pressed"]
[connection signal="pressed" from="CarrotButton" to="." method="_on_CarrotButton_pressed"]
